# radiator-rl

./: .gitignore  LICENSE.md  README.md  pyproject.toml
config/: hyperparameters.yml
data/: data_vizualisation.py  preproc.py
radiator_rl/: utils.py
radiator_rl/agents/: dqn_agent.py  rule_based_agent.py
radiator_rl/envs/: house_env.py  replay_buffer.py  time_manager.py
radiator_rl/models/: dqn.py
src/: dqn_agent.py  house_env.py  hyperparameters.yml  rule_based_agent.py
src/agents/: dqn_agent.py  rule_based_agent.py
src/models/: dqn.py
tests/: baseline.py  compare.py  dqn_training.py  house_env_testing.py  parallelization.py  time_manager.py
