[project]
name = "radiator_rl"
version = "0.1.0"
description = "A RL project to control the radiator of a house"
authors = [
    {name = "Malo POTEREAU",email = "malo.potereau@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "cloudpickle (==3.1.1)",
    "contourpy (==1.3.3)",
    "cycler (==0.12.1)",
    "farama-notifications (==0.0.4)",
    "filelock (==3.19.1)",
    "fonttools (==4.60.1)",
    "fsspec (==2025.9.0)",
    "gymnasium (==1.2.1)",
    "jinja2 (==3.1.6)",
    "kiwisolver (==1.4.9)",
    "markupsafe (==3.0.3)",
    "matplotlib (==3.10.6)",
    "mpmath (==1.3.0)",
    "networkx (==3.5)",
    "numpy (==2.3.3)",
    "nvidia-cublas-cu12 (==12.8.4.1)",
    "nvidia-cuda-cupti-cu12 (==12.8.90)",
    "nvidia-cuda-nvrtc-cu12 (==12.8.93)",
    "nvidia-cuda-runtime-cu12 (==12.8.90)",
    "nvidia-cudnn-cu12 (==9.10.2.21)",
    "nvidia-cufft-cu12 (==11.3.3.83)",
    "nvidia-cufile-cu12 (==1.13.1.3)",
    "nvidia-curand-cu12 (==10.3.9.90)",
    "nvidia-cusolver-cu12 (==11.7.3.90)",
    "nvidia-cusparse-cu12 (==12.5.8.93)",
    "nvidia-cusparselt-cu12 (==0.7.1)",
    "nvidia-nccl-cu12 (==2.27.3)",
    "nvidia-nvjitlink-cu12 (==12.8.93)",
    "nvidia-nvtx-cu12 (==12.8.90)",
    "packaging (==25.0)",
    "pandas (==2.3.3)",
    "pillow (==11.3.0)",
    "pyparsing (==3.2.5)",
    "python-dateutil (==2.9.0.post0)",
    "pytz (==2025.2)",
    "pyyaml (==6.0.3)",
    "setuptools (==80.9.0)",
    "six (==1.17.0)",
    "sympy (==1.14.0)",
    "torch (==2.8.0)",
    "triton (==3.4.0)",
    "typing-extensions (==4.15.0)",
    "tzdata (==2025.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "primary"


[[tool.poetry.source]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

